improve handling of path parameters

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "fs-extra": "^8.0.1",
     "js-yaml": "^3.13.1",
     "openapi-response-validator": "^3.8.1",
-    "openapi-schema-validator": "^3.0.3"
+    "openapi-schema-validator": "^3.0.3",
+    "path-parser": "^4.2.0"
   },
   "husky": {
     "hooks": {
