--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "chai-openapi-response-validator",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Simple Chai support for asserting that HTTP responses satisfy an OpenAPI spec",
   "main": "index.js",
   "scripts": {
     "test": "mocha test --recursive --exit",
-    "test:coverage": "nyc npm test && nyc report --reporter=html && nyc check-coverage --statements 95 --branches 95 --functions 95 --lines 95",
+    "test:coverage": "nyc npm test && nyc report --reporter=html && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "test:coverage:browse": "npm run test:coverage; open coverage/index.html",
     "test:mutation": "stryker run",
     "test:full": "npm run lint && npm run test:coverage && npm run test:mutation",
@@ -55,12 +55,12 @@
     "fs-extra": "^8.0.1",
     "js-yaml": "^3.13.1",
     "openapi-response-validator": "^3.8.1",
-    "openapi-schema-validator": "^3.0.3"
+    "openapi-schema-validator": "^3.0.3",
+    "path-parser": "^4.2.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm run test:full"
+      "pre-commit": "npm run test:full"
     }
   }
 }
