--- a/package.json
+++ b/package.json
@@ -40,16 +40,23 @@
     "@stryker-mutator/javascript-mutator": "^2.0.0",
     "@stryker-mutator/mocha-framework": "^2.0.0",
     "@stryker-mutator/mocha-runner": "^2.0.0",
+    "axios": "^0.19.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.13.0",
+    "express": "^4.17.1",
     "husky": "^2.3.0",
     "mocha": "^6.1.4",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "fs-extra": "^8.0.1",
