--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "express": "^4.17.1",
     "husky": "^2.3.0",
     "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
+    "nyc": "=15.0.0-beta.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "supertest": "^4.0.2"
