--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chai-openapi-response-validator",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "Simple Chai support for asserting that HTTP responses satisfy an OpenAPI spec",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "test:full": "npm run lint && npm run test:coverage && npm run test:mutation",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "prepublish": "npm run test:full"
+    "prepublishOnly": "npm run test:full"
   },
   "repository": {
     "type": "git",
