--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "compress-tag": "^2.0.0",
     "fs-extra": "^8.0.1",
     "js-yaml": "^3.13.1",
     "openapi-response-validator": "^3.8.1",
