test: remove Windows Travis job

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ node_js:
   - node
 os:
   - osx
-  - windows
 cache: yarn
 script:
-  - npm run lint
-  # - npm run test:ci && bash <(curl -s https://codecov.io/bash)
+  - npm run test:ci && bash <(curl -s https://codecov.io/bash)
