--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -8,9 +8,8 @@
     "test": "mocha --recursive --exit",
     "test:coverage": "nyc npm test && nyc report --reporter=lcov && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "test:coverage:browse": "npm run test:coverage; open coverage/lcov-report/index.html",
-    "pretest:mutation": "dir",
-    "test:mutation": "rimraf test",
-    "posttest:mutation": "dir",
+    "test:mutation": "stryker run",
+    "posttest:mutation": "rimraf commonTestResources",
     "test:precommit": "npm run lint && npm run test:coverage && npm run test:mutation",
     "test:ci": "npm run test:precommit",
     "lint": "eslint {lib,test}/**/*.js",
