--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -10,14 +10,14 @@
     "test:coverage:browse": "npm run test:coverage; open coverage/lcov-report/index.html",
     "test:mutation": "stryker run",
     "posttest:mutation": "rimraf commonTestResources",
-    "test:precommit": "npm run lint && npm run test:coverage && npm run test:mutation",
+    "test:precommit": "npm run lint && npm run test:coverage",
     "test:ci": "npm run test:precommit",
     "lint": "eslint {lib,test}/**/*.js",
     "lint:fix": "npm run lint -- --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RuntimeTools/openapi-validators.git",
+    "url": "git+https://github.com/RuntimeTools/OpenAPIValidators.git",
     "directory": "packages/chai-openapi-response-validator"
   },
   "author": "OpenApiChai <openapichai@gmail.com>",
@@ -35,9 +35,9 @@
     "validate"
   ],
   "bugs": {
-    "url": "https://github.com/RuntimeTools/openapi-validators/issues"
+    "url": "https://github.com/RuntimeTools/OpenAPIValidators/issues"
   },
-  "homepage": "https://github.com/RuntimeTools/openapi-validators/packages/chai-openapi-response-validator#readme",
+  "homepage": "https://github.com/RuntimeTools/OpenAPIValidators/packages/chai-openapi-response-validator#readme",
   "files": [
     "index.*",
     "lib/**/*"
