test, refactor: tidy code, kill mutants

--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -10,7 +10,7 @@
     "test:coverage:browse": "npm run test:coverage; open coverage/lcov-report/index.html",
     "test:mutation": "stryker run",
     "posttest:mutation": "rimraf commonTestResources",
-    "test:precommit": "npm run lint && npm run test:coverage",
+    "test:precommit": "npm run lint && npm run test:coverage && npm run test:mutation",
     "test:ci": "npm run test:precommit",
     "lint": "eslint {lib,test}/**/*.js",
     "lint:fix": "npm run lint -- --fix"
