--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -42,6 +42,7 @@
     "@stryker-mutator/core": "^3.1.0",
     "@stryker-mutator/javascript-mutator": "^3.1.0",
     "@stryker-mutator/jest-runner": "^3.1.0",
+    "axios": "^0.19.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.17.2",
@@ -49,7 +50,9 @@
     "express": "^4.17.1",
     "fs-extra": "^9.0.0",
     "jest": "^25.4.0",
-    "rimraf": "^3.0.2"
+    "request-promise": "^4.2.5",
+    "rimraf": "^3.0.2",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "compress-tag": "^2.0.0",
