--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,46 +4,11 @@ env:
 extends:
   - airbnb-base
   - eslint:recommended
+  - prettier # must go last, to turn off some previous rules
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
 rules:
-  indent:
-    - error
-    - 2
-    - SwitchCase: 1
-  linebreak-style:
-    - off
-    - unix
-  quotes:
-    - warn
-    - single
-  semi:
-    - error
-    - always
-  no-plusplus:
-    - error
-    - allowForLoopAfterthoughts: true
-  no-use-before-define:
-    - error
-    - functions: false
-  object-curly-newline:
-    - error
-    - consistent: true
-  object-curly-spacing:
-    - error
-    - always
-  comma-dangle:
-    - error
-    - always-multiline
-  require-await:
-    - error
-  keyword-spacing:
-    - error
-  prefer-const:
-    - error
   func-names: 0
-  max-len:
-    - off
-    - code: 100
-      ignoreComments: true
+  no-use-before-define: 0
+  require-await: error
