--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -12,7 +12,8 @@
     "posttest:mutation": "rimraf commonTestResources",
     "test:precommit": "npm run lint && npm run test:coverage",
     "test:ci": "npm run test:precommit && npm run test:mutation",
-    "lint": "eslint {lib,test}/**/*.js",
+    "format": "prettier --write . --ignore-path ../../.prettierignore",
+    "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix"
   },
   "repository": "https://github.com/RuntimeTools/OpenAPIValidators/tree/master/packages/chai-openapi-response-validator",
