--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -13,7 +13,8 @@
     "posttest:mutation": "rimraf commonTestResources",
     "test:precommit": "npm run lint && npm run test:coverage",
     "test:ci": "npm run test:precommit",
-    "lint": "eslint {src,__test__}/**/*.js",
+    "format": "prettier --write . --ignore-path ../../.prettierignore",
+    "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix"
   },
   "repository": "https://github.com/RuntimeTools/OpenAPIValidators/tree/master/packages/jest-openapi",
