chore: run using yarn instead of npm

--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -6,15 +6,15 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "mocha --recursive --exit",
-    "test:coverage": "nyc npm test && nyc report --reporter=lcov && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "test:coverage:browse": "npm run test:coverage; open coverage/lcov-report/index.html",
+    "test:coverage": "nyc yarn test && nyc report --reporter=lcov && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "test:coverage:browse": "yarn test:coverage; open coverage/lcov-report/index.html",
     "test:mutation": "stryker run",
     "posttest:mutation": "rimraf commonTestResources",
-    "test:precommit": "npm run lint && npm run test:coverage",
-    "test:ci": "npm run test:precommit && npm run test:mutation",
+    "test:precommit": "yarn lint && yarn test:coverage",
+    "test:ci": "yarn test:precommit && yarn test:mutation",
     "format": "prettier --write . --ignore-path ../../.prettierignore",
     "lint": "eslint .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "yarn lint -- --fix"
   },
   "repository": "https://github.com/RuntimeTools/OpenAPIValidators/tree/master/packages/chai-openapi-response-validator",
   "author": "OpenApiChai <openapichai@gmail.com>",
