--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "format": "(cd packages/chai-openapi-response-validator && npm run format) && (cd packages/jest-openapi && npm run format)",
-    "lint": "(cd packages/chai-openapi-response-validator && npm run lint) && (cd packages/jest-openapi && npm run lint)",
-    "test": "(cd packages/chai-openapi-response-validator && npm run test) && (cd packages/jest-openapi && npm run test)",
-    "test:precommit": "(cd packages/chai-openapi-response-validator && npm run test:precommit) && (cd packages/jest-openapi && npm run test:precommit)",
-    "test:ci": "(cd packages/chai-openapi-response-validator && npm run test:ci) && (cd packages/jest-openapi && npm run test:ci)",
-    "prepublishOnly": "npm run test:precommit"
+    "format": "(cd packages/chai-openapi-response-validator && yarn format) && (cd packages/jest-openapi && yarn format)",
+    "lint": "(cd packages/chai-openapi-response-validator && yarn lint) && (cd packages/jest-openapi && yarn lint)",
+    "test": "(cd packages/chai-openapi-response-validator && yarn test) && (cd packages/jest-openapi && yarn test)",
+    "test:precommit": "(cd packages/chai-openapi-response-validator && yarn test:precommit) && (cd packages/jest-openapi && yarn test:precommit)",
+    "test:ci": "(cd packages/chai-openapi-response-validator && yarn test:ci) && (cd packages/jest-openapi && yarn test:ci)",
+    "prepublishOnly": "yarn test:precommit"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
@@ -28,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test:precommit"
+      "pre-commit": "yarn test:precommit"
     }
   }
 }
