--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -8,14 +8,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:coverage:browse": "npm run test:coverage; open coverage/lcov-report/index.html",
+    "test:coverage:browse": "yarn test:coverage; open coverage/lcov-report/index.html",
     "test:mutation": "stryker run",
     "posttest:mutation": "rimraf commonTestResources",
-    "test:precommit": "npm run lint && npm run test:coverage",
-    "test:ci": "npm run test:precommit",
+    "test:precommit": "yarn lint && yarn test:coverage",
+    "test:ci": "yarn test:precommit",
     "format": "prettier --write . --ignore-path ../../.prettierignore",
     "lint": "eslint .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "yarn lint -- --fix"
   },
   "repository": "https://github.com/RuntimeTools/OpenAPIValidators/tree/master/packages/jest-openapi",
   "author": "rwalle61 <richard.lh.waller@gmail.com>",
