--- a/commonTestResources/exampleOpenApiFiles/valid/serversDefinedDifferently/withServerVariables.yml
+++ b/commonTestResources/exampleOpenApiFiles/valid/serversDefinedDifferently/withServerVariables.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Example OpenApi 3 spec
-  description: Has server variables
+  description: Defines servers using server variables
   version: 0.1.0
 servers:
   - url: /{variableInPath}
