--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "combos": "^0.2.0",
     "compress-tag": "^2.0.0",
+    "lodash.flatmap": "^4.5.0",
     "openapi-validator": "^0.9.0"
   }
 }
