ci(chai): add watch mode test script, add eslintignore

--- a/packages/chai-openapi-response-validator/package.json
+++ b/packages/chai-openapi-response-validator/package.json
@@ -6,11 +6,12 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "mocha --recursive --exit",
+    "test:watch": "yarn test --watch",
     "test:coverage": "nyc yarn test && nyc report --reporter=lcov && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "test:coverage:browse": "yarn test:coverage; open coverage/lcov-report/index.html",
     "test:mutation": "stryker run",
     "posttest:mutation": "rimraf commonTestResources",
-    "test:precommit": "yarn lint && yarn test:coverage",
+    "test:precommit": "yarn format && yarn lint && yarn test:coverage",
     "test:ci": "yarn test:precommit && yarn test:mutation",
     "format": "prettier --write . --ignore-path ../../.prettierignore",
     "lint": "eslint .",
