--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "format": "(cd packages/chai-openapi-response-validator && yarn format) && (cd packages/jest-openapi && yarn format)",
+    "format": "prettier --write . --ignore-path .prettierignore",
     "lint": "(cd packages/chai-openapi-response-validator && yarn lint) && (cd packages/jest-openapi && yarn lint)",
     "test": "(cd packages/chai-openapi-response-validator && yarn test) && (cd packages/jest-openapi && yarn test)",
     "test:precommit": "(cd packages/chai-openapi-response-validator && yarn test:precommit) && (cd packages/jest-openapi && yarn test:precommit)",
