refactor: added openapi-validator as package

--- a/packages/openapi-validator/package.json
+++ b/packages/openapi-validator/package.json
@@ -1,5 +1,6 @@
 {
-  "private": true,
+  "name": "openapi-validator",
+  "version": "0.10.0",
   "scripts": {},
   "devDependencies": {
     "chai": "^4.2.0",
