docs: update links to new github org

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "OpenAPIValidators",
-  "projectOwner": "RuntimeTools",
+  "projectOwner": "openapi-library",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
