--- a/commonTestResources/exampleOpenApiFiles/valid/basePathDefinedDifferently/noBasePathProperty.yml
+++ b/commonTestResources/exampleOpenApiFiles/valid/basePathDefinedDifferently/noBasePathProperty.yml
@@ -1,10 +1,10 @@
 swagger: '2.0'
 info:
-  description: Has one path.
+  description: Has one path
   title: Example OpenApi 2 spec with no basePath
   version: 0.1.0
 paths:
-  /test/responseBody/string:
+  /endpointPath:
     get:
       responses:
         200:
