--- a/commonTestResources/exampleOpenApiFiles/valid/serversDefinedDifferently/serversIsEmptyArray.yml
+++ b/commonTestResources/exampleOpenApiFiles/valid/serversDefinedDifferently/serversIsEmptyArray.yml
@@ -5,7 +5,7 @@ info:
   version: 0.1.0
 servers: []
 paths:
-  /test/responseBody/string:
+  /endpointPath:
     get:
       responses:
         200:
