--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "clean": "yarn workspaces run clean",
+    "clean": "yarn workspaces run clean && rimraf packages/.nyc_output && rimraf packages/coverage",
     "format": "prettier --write . --ignore-path .prettierignore",
     "lint": "yarn workspaces run lint",
     "build": "yarn workspaces run build",
@@ -21,9 +21,10 @@
     "lerna:publish": "lerna publish"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
