wip test(jest): get tests running in ts

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -24,5 +24,4 @@ rules:
   require-await: error
   '@typescript-eslint/no-use-before-define': 0
 # TODO
-# Not sure if need to migrate chai plugin too
-# Get tests working
+# Migrate chai, jest
