--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -39,6 +39,7 @@
     "dist/**/*"
   ],
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "axios": "^0.21.1",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -46,9 +47,11 @@
     "eslint-plugin-jest": "^24.1.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
-    "jest": "^26.5.2",
+    "jest": "^26.6.3",
     "request-promise": "^4.2.6",
-    "supertest": "^6.0.0"
+    "supertest": "^6.0.0",
+    "ts-jest": "^26.5.3",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "jest-matcher-utils": "^26.6.2",
