--- a/packages/openapi-validator/tsconfig.json
+++ b/packages/openapi-validator/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["index.ts", "lib"],
+  "include": ["lib"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
