--- a/packages/jest-openapi/package.json
+++ b/packages/jest-openapi/package.json
@@ -6,13 +6,14 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
+    "clean:openapi-validator": "cd ../openapi-validator && yarn clean",
     "format": "prettier --write ../../ --ignore-path ../../.prettierignore",
     "lint": "tsc --noEmit --project tsconfig.eslint.json && eslint .",
     "lint:fix": "yarn lint --fix",
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "yarn clean && jest --coverage",
+    "test:coverage": "yarn clean && yarn clean:openapi-validator && jest --coverage",
     "test:coverage:browse": "yarn test:coverage; open ../coverage/lcov-report/index.html",
     "test:precommit": "yarn format && yarn lint && yarn test:coverage",
     "test:ci": "yarn test:precommit",
